Fixed bug: Improved alignment and spacing of editing form.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@1649 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_formsOnPage.css
+++ b/feeditadvanced/res/css/fe_formsOnPage.css
@@ -113,6 +113,37 @@ table.typo3-TCEforms select.formField {
 	border-width: 0 !important;
 }
 
+.formsOnPage tr.fieldHeader td {
+	padding-top: 5px;
+}
+
+.formsOnPage .typo3-TCEforms-palette {
+	margin-top: 5px !important;
+}
+
+.formsOnPage .typo3-TCEforms-palette td {
+	padding-right: 5px;
+}
+
+.formsOnPage tr.palField input.checkbox,
+.formsOnPage tr.field input.checkbox {
+	margin-right: 3px;
+}
+
+.formsOnPage tr.fieldHeader td,
+.formsOnPage tr.field td,
+.formsOnPage tr.palField td {
+	padding-top: 5px;
+}
+
+.formsOnPage tr.fieldHeader td {
+	padding-left: 12px;
+}
+
+.formsOnPage .palettePadding {
+	padding-left: 4px;
+}
+
 .formsOnPage #typo3-tree td img,
 .formsOnPage #typo3-tree td a {
 	border-width: 0 !important;
